--- a/css/css_cabinet.less
+++ b/css/css_cabinet.less
@@ -1,5 +1,5 @@
 /* BORDER */ /* BORDER */ /* BORDER */ /* BORDER */
-	
+
 	.b (@bb:none) {
 		border:@bb;
 	}
@@ -15,12 +15,12 @@
 	.br (@br:none) {
 		border-right:@br;
 	}
-			
+
 /* PADDING */ /* PADDING */ /* PADDING */ /* PADDING */
-	
+
 	.pp (@pp:10px 10px 10px 10px) {
 		padding:@pp;
-	}	
+	}
 	.pt (@pt:10px) {
 		padding-top:@pt
 	}
@@ -32,13 +32,13 @@
 	}
 	.pr (@pt:10px) {
 		padding-right:@pt
-	}	
-	
+	}
+
 /* MARGIN */ /* MARGIN */ /* MARGIN */ /* MARGIN */
-	
+
 	.m (@m:10px) {
 		margin:@m;
-	}	
+	}
 	.mt (@mt:10px) {
 		margin-top:@mt
 	}
@@ -50,10 +50,10 @@
 	}
 	.mr (@mr:10px) {
 		margin-right:@mr
-	}		
-		
+	}
+
 /* FLOAT */ /* FLOAT */ /* FLOAT */ /* FLOAT */
-	
+
 	.fl {
 		float:left;
 	}
@@ -63,21 +63,21 @@
 	.fn {
 		float:none;
 	}
-	
+
 /* FLOAT */ /* FLOAT */ /* FLOAT */ /* FLOAT */
-	
+
 	.clear {
 		clear:both;
-	}	
+	}
 	.dib {
 		display:inline-block;
-	}	
+	}
 	.di {
 		display:inline;
-	}	
+	}
 	.db {
 		display:block;
-	}	
+	}
 	.dn {
 		display:none;
 }
@@ -85,22 +85,22 @@
 /* fonts */ /* fonts */ /* fonts */ /* fonts */
 	.c(@color:#FFF){
 		color:@color;
-	}	
+	}
 	.bold {
-		font-weight:600;	
-	}	
+		font-weight:600;
+	}
 	.lighter {
-		font-weight:300;	
-	}	
+		font-weight:300;
+	}
 	.normal{
-		font-weight:normal;	
-	}	
+		font-weight:normal;
+	}
 	.italic {
 		font-style:italic;
-	}		
+	}
 	.left {
 		text-align:left;
-	}	
+	}
 	.right {
 		text-align:right;
 	}
@@ -117,14 +117,14 @@
 		text-align:justify;
 	}
 	.uppercase {
-		text-transform: uppercase;	
-	}	
+		text-transform: uppercase;
+	}
 	.lowercase {
-		text-transform: lowercase;	
-	}	
+		text-transform: lowercase;
+	}
 	.text-shadow (@shadow: 1px 1px 0 #e0e0e0) {
-		text-shadow:@shadow;		
-	}	
+		text-shadow:@shadow;
+	}
 	.lh (@lh:23px) {
 		line-height:@lh;
 	}
@@ -135,7 +135,7 @@
 		font-weight:@font-weight;
 	}
 /* OTHER */	/* OTHER */	/* OTHER */	/* OTHER */
-	
+
 	.pointer {
 		cursor:pointer;
 	}
@@ -144,19 +144,19 @@
 	}
 	.absolute {
 		position:absolute;
-	}	
+	}
 	.bg (@bg:#FFF) {
 		background:@bg;
-	}	
+	}
 	.bp (@bp:0 0) {
 		background-position:@bp;
-	}	
+	}
 	.list {
 		list-style-type:none;
-	}	
+	}
 	.w (@w:100%) {
 		width:@w;
-	}	
+	}
 	.minw (@minw:50%) {
 		min-width:@minw;
 	}
@@ -164,13 +164,13 @@
 		max-width:@maxw;
 	}
 	.h (@h:100%) {
-		height:@h;		
+		height:@h;
 	}
 	.minh (@minh:100%) {
-		min-height:@minh;		
+		min-height:@minh;
 	}
 	.maxh (@maxh:100%) {
-		max-height:@maxh;		
+		max-height:@maxh;
 	}
 	.radius (@radius:10px) {
 		border-radius: @radius;
@@ -180,13 +180,13 @@
 	}
 	.box-sizing {
 		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;    
-		box-sizing: border-box; 
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 	}
 	.box-shadow (@bs:0px 0px 2px #c6c6c6) {
 		box-shadow:@bs;
-	}	
-	
+	}
+
 /* CONTENT */ /* CONTENT */ /* CONTENT */ /* CONTENT */
 
 
@@ -207,16 +207,16 @@
 
 
 section#cabinet {
-	
+
 	.col, .row {
 		.h(100%);
 	}
-	
+
 	.window {
-		.pp(15px 10px);	
+		.pp(15px 10px);
 		.minh(95%);
-	}	
-	
+	}
+
 	.add {
 		.m(auto);
 		.c(@blue-1);
@@ -224,12 +224,12 @@ section#cabinet {
 		.center;
 		.db;
 		.mb(10px);
-	}	
-			
+	}
+
 	ul.list {
 		.fl;
 		.w;
-		
+
 		li {
 			.fl;
 			display:table;
@@ -241,12 +241,14 @@ section#cabinet {
 			.size(16px);
 			.fw(300);
 			.relative;
-			
+
 			&:first-child {
 				.bt(0);
 			}
+
+
 		}
-		
+
 		li.deactive {
 			&:before {
 				content:'';
@@ -259,65 +261,69 @@ section#cabinet {
 				left:0;
 				.dib;
 			}
-			
+
 			span {
-				.c(rgba(0,0,0,0.5))!important;	
+				.c(rgba(0,0,0,0.5))!important;
 			}
-			
+
 			a {
-				.c(rgba(0,0,0,0.5))!important;	
-				
+				.c(rgba(0,0,0,0.5))!important;
+
 				&:hover {
 					.c(@blue-2)!important;
 				}
 			}
-		}			
-	}	
-	
+		}
+	}
+
 	.info {
 		.dib;
 		vertical-align:middle;
-		.w(85%);	
+		.w(85%);
 		.relative;
 		.fl;
-		
+
 		span.time, span.title {
 			.fl;
-		}	
-				
+		}
+
 		span.title {
 			.w;
 			.mb(10px);
-			
+
 			i {
 				.fl;
 				.relative;
 				top:2px;
 			}
-			
+
 			span {
 				.fl;
 				.w(80%);
 				.ml(10px);
 			}
-		}	
-		
+		}
+
+		span.title.name {
+			.mb(0);
+		}
+
 		.field {
 			.w;
 			.fl;
 			.minh(45px);
-			
+
 			&:hover {
 				.delete {
 					.dib;
 				}
 			}
-			
+
 			span {
 				.size(16px);
 				.m(0)!important;
 			}
-			
+
 			.delete {
 				.size(20px);
 				.fl;
@@ -330,8 +336,8 @@ section#cabinet {
 				.c(@blue-1);
 				.absolute;
 				right:-45px;
-				top:0;
-			}	
+				top:4px;
+			}
 
 			fieldset {
 				.fl;
@@ -340,7 +346,7 @@ section#cabinet {
 				.lh(40px);
 			}
 		}
-		
+
 		.field.check {
 			.checkbox {
 				.fl;
@@ -350,11 +356,11 @@ section#cabinet {
 				.h(27px);
 				.mr(10px);
 				.lh(normal);
-				
+
 				label.check {
 					.w(25px)!important;
 					.h(25px)!important;
-					
+
 					&:after {
 						.size(18px);
 						top:4px;
@@ -362,13 +368,13 @@ section#cabinet {
 					}
 				}
 			}
-			
+
 			input[type=text] {
 				.w(84%);
 			}
 		}
 	}
-		
+
 	input[type=text], textarea {
 		.fl;
 		.w;
@@ -376,60 +382,59 @@ section#cabinet {
 		.bg(#F4F4F4);
 		.box-sizing;
 		.b(0);
-		.size(18px);
+		.size(16px);
 		.c(#2f2f2f);
 		.fw(300);
 		.mb(5px);
 		.b(1px solid @border-1);
 	}
-	
+
 	input[type=text]:disabled, textarea:disabled {
-		.bg(none);	
+		.bg(none);
 		.b(0);
 		.pp(8px 0);
 	}
-	
+
 	textarea {
 		resize:none;
 		.minh(40px)!important;
 		.maxw(764px);
 	}
-	
-	
+
 	.info.one {
 		fieldset {
 			.w;
-			
+
 			input[type=text] {
 				.w;
 			}
 		}
-	}	
-	
+	}
+
 	.info.two {
 		fieldset {
 			.w(50%);
 			.pl(2%);
-			
+
 			&:first-child {
 				.pl(0);
-			}	
-			
-		}	
+			}
+
+		}
 	}
-	
+
 	.info.three {
 		fieldset {
 			.w(33.3%);
 			.pl(2%);
-			
+
 			&:first-child {
 				.pl(0);
 			}
-			
-		}	
+
+		}
 	}
-	
+
 	.action.line, .action.block {
 		.dib;
 		.fr;
@@ -440,84 +445,91 @@ section#cabinet {
 		.right;
 		.minw(60px);
 		.w(10%);
-		
+
 		a {
-			.m(5px 3px);			
+			.m(5px 3px);
 		}
-	}	
+	}
 
 	.action.line {
 		.minw(120px);
 		.w(10%);
-		
+
 		a {
 			.dib;
 		}
-		
+
 		.switch {
 			.dib;
 			top:5px;
 		}
 	}
-	
+
 	.action.block {
 		.minw(60px);
 		.w(10%);
-		
+
 		a {
 			.db;
 			.w;
 		}
 	}
-	
+
 	.info.list {
 		display:table-cell;
 		float:none;
-		
+
 		a {
-			.tdn;	
+			.tdn;
 			.fl;
 			.w(95%);
-			.size(18px);
+			.size(16px);
 		}
 	}
-	
+
 	.info.current {
-	
+
 		fieldset {
 			.w(80%);
 			.fl;
 		}
-		
-		.time {
-			.size(14px);
+
+		.option {
+			.size(16px);
 			.fl;
-			
+
 			label {
 				.h(40px);
 				.lh(40px);
 				.fl;
-			}	
-			
+			}
+
 			fieldset {
 				.w(150px);
-				
+
 				input[type=text] {
 					.w(45px);
 					.dib;
 					.fl;
 					.center;
 					.m(0 10px 0 10px);
-					
+
 					&:disabled {
 						.m(0);
 					}
 				}
-				
-			}		
-		}		
+			}
+		}
+
+		.option.price {
+			fieldset {
+				input[type=text] {
+					.w(60px);
+				}
+			}
+		}
 	}
-	
+
 	.color {
 		.fl;
 		.w(34px);
@@ -526,56 +538,67 @@ section#cabinet {
 		.radius(1px);
 		.pp(2px);
 		.mr(10px);
-		
+
 		.minicolors-theme-default.minicolors {
 			.w;
 			.h;
 		}
 	}
-	
+
 	.images {
 		.fl;
 		.w(120px);
-		.m(5px 0);
+		.m(5px);
 		.relative;
 		.center;
 		.left;
-		
+		.b(1px solid @border-1);
+		.box-sizing;
+		.pp(5px);
+		.radius(5px);
+
 		img {
 			.dib;
-			.b(1px solid @border-1);
-			.box-sizing;
-			.pp(5px);
 			.radius(5px);
 			.bg(#FFF);
+			.w;
+			.h;
+			.fl;
 		}
-		
+
 		a  {
-			right:10px;
-			top:1px;
-			.size(16px);
-			.pp(1px 5px);
-			.box-sizing;
-			.radius(5px);
+			.c(#FFF);
+			.bg(@blue-1);
+			.w(22px);
+			.h(22px);
+			.lh(22px);
+			.b(2px solid #FFF);
 			.absolute;
-			.w(auto);
-			.bg(#FFF);
-			
+			bottom:-8px;
+			right:-1px;
+			.radius(100%);
+			.center;
+
+			i {
+				.size(14px);
+				.c(#FFF);
+				.mr(0);
+			}
 		}
-	}	
-	
-	
+	}
+
+
 	ul.doctor {
 		.fl;
 		.w;
 		display:table;
-		
+
 		li {
-			display:table-cell;			
+			display:table-cell;
 			vertical-align:top;
 			.center;
 			.m(5px 0);
-			
+
 			.box {
 				.dib;
 				.w(98%);
@@ -583,14 +606,14 @@ section#cabinet {
 				.radius(5px);
 				.pp(10px);
 				.box-sizing;
-				.minh(300px);
+				.minh(250px);
 				.relative;
 				.ml(10px);
-				
+
 				&:first-child {
 					.ml(0);
 				}
-				
+
 			}
 		}
 
@@ -608,14 +631,14 @@ section#cabinet {
 				z-index:1;
 			}
 		}
-		
-		span.name {			
+
+		.name {
 			.h(auto);
 			.lh(normal);
 			.w;
-			.fl;				
+			.fl;
 		}
-				
+
 		.pic {
 			.m(10px auto);
 			.w;
@@ -623,7 +646,7 @@ section#cabinet {
 			.fl;
 			.center;
 		}
-		
+
 		.images {
 			float:none;
 			.w(100px);
@@ -633,52 +656,62 @@ section#cabinet {
 			.left;
 			.m(auto);
 			.dib;
-			
-			a {
-				.relative;
-			}
-			
+			.pp(4px);
+			.radius(100%);
+			.bg(#FFF);
+			box-shadow:inset 1px 1px 1px rgba(0,0,0,0.1);
+
 			img {
 				.dib;
-				.b(1px solid @border-1);
 				.box-sizing;
-				.pp(5px);
-				.radius(5px);
+				.radius(100%);
 				.bg(#FFF);
+				.w;
 			}
-			
-			
+
+			a.more {
+				.c(#FFF);
+				.bg(@blue-1);
+				.w(22px);
+				.h(22px);
+				.lh(22px);
+				.b(2px solid #FFF);
+				.absolute;
+				bottom:-3px;
+				right:10px;
+				.radius(100%);
+				.center;
+
+				i {
+					.size(14px);
+					.c(#FFF);
+					.mr(0);
+				}
+			}
 		}
-		
+
 		span {
 			.db;
-			.w;		
+			.w;
 			.fl;
-			
+
 			a {
 				.w;
 				.dib;
 				.mb(5px);
 			}
-		}			
-		
-		span.title {			
+		}
+
+		span.title {
 			.italic;
 			.size(12px);
 			.fw(300);
 			.c(@grey-2);
-			.pp(0);			
+			.pp(0);
 		}
-		
+
 		span.specialization {
 			.size(12px);
-		}
-		
-		span.address {
-			.mt(10px);
-			.w;
-			
-			
 		}
 
 		.action.line {
@@ -693,24 +726,24 @@ section#cabinet {
 
 @media only screen and (max-width : 768px){
 
-	
+
 	section#cabinet {
-	
+
 		.info {
 			.w(95%);
-			
+
 			span.title {
-				.m(5px 0);
+				.m(5px 0 10px);
 			}
 		}
-		
-		
+
+
 		.action.block {
 			.absolute;
 			top:5px;
 			right:0;
 			.w;
-			
+
 			a {
 				.dib;
 				.w(auto);
@@ -720,12 +753,12 @@ section#cabinet {
 
 		ul.doctor {
 			.dib;
-			
+
 			li {
 				.dib;
 				.pp(0);
 				.w(49.6%);
-				
+
 				.box {
 					.w(95%);
 				}
@@ -739,74 +772,74 @@ section#cabinet {
 @media only screen and (max-width : 480px){
 
 	section#cabinet, section#my_account {
-		
+
 		.info {
 			.w;
 		}
-		
+
 		.info.one {
-			.w(90%);	
+			.w(90%);
 		}
-		
+
 		.info.two {
 			.w(90%);
-			
+
 			fieldset {
 				.w;
 				.pl(0);
 				.mt(5px);
-				
+
 				&:first-child {
 					.pl(0);
-				}	
-				
-			}	
+				}
+
+			}
 		}
-	
+
 		.info.three {
 			.w(90%);
-			
+
 			fieldset {
 				.pr(5px);
 				.pl(0);
 				.mt(5px);
-				
+
 				&:first-child {
 					.w;
 					.pr(0);
 				}
-			}		
+			}
 		}
-		
+
 		.action.line {
 			.fl;
 			.w;
-			
+
 		}
-		
+
 		.info.list {
 			.dib;
 			.fl;
-		}	
-		
+		}
+
 		ul.doctor {
-			
+
 			li {
 				.w;
-				
+
 				.box {
 					.w;
 					.minh(auto);
 				}
-				
+
 				.pic {
 					.fl;
 					.w;
-					
+
 					.images {
 						float:none;
 					}
-					
+
 				}
 			}
 		}
