--- a/css/css_message.css
+++ b/css/css_message.css
@@ -1,411 +1,1 @@
-/* BORDER */
-/* BORDER */
-/* BORDER */
-/* BORDER */
-/* PADDING */
-/* PADDING */
-/* PADDING */
-/* PADDING */
-/* MARGIN */
-/* MARGIN */
-/* MARGIN */
-/* MARGIN */
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-.fl {
-  float: left;
-}
-.fr {
-  float: right;
-}
-.fn {
-  float: none;
-}
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-.clear {
-  clear: both;
-}
-.dib {
-  display: inline-block;
-}
-.di {
-  display: inline;
-}
-.db {
-  display: block;
-}
-.dn {
-  display: none;
-}
-/* fonts */
-/* fonts */
-/* fonts */
-/* fonts */
-.bold {
-  font-weight: 600;
-}
-.lighter {
-  font-weight: 300;
-}
-.normal {
-  font-weight: normal;
-}
-.italic {
-  font-style: italic;
-}
-.left {
-  text-align: left;
-}
-.right {
-  text-align: right;
-}
-.tdn {
-  text-decoration: none;
-}
-.tdu {
-  text-decoration: underline;
-}
-.center {
-  text-align: center;
-}
-.justify {
-  text-align: justify;
-}
-.uppercase {
-  text-transform: uppercase;
-}
-.lowercase {
-  text-transform: lowercase;
-}
-/* OTHER */
-/* OTHER */
-/* OTHER */
-/* OTHER */
-.pointer {
-  cursor: pointer;
-}
-.relative {
-  position: relative;
-}
-.absolute {
-  position: absolute;
-}
-.list {
-  list-style-type: none;
-}
-.box-sizing {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-/* CONTENT */
-/* CONTENT */
-/* CONTENT */
-/* CONTENT */
-/* COLOR BASE */
-/* COLOR BASE */
-section#message .window {
-  padding: 15px 10px;
-  text-align: left;
-  position: relative;
-  margin-bottom: 10px;
-}
-section#message .action {
-  float: left;
-  width: 100%;
-  margin-bottom: 10px;
-}
-section#message .action fieldset {
-  width: 200px;
-}
-section#message ul {
-  font-size: 16px;
-  width: 100%;
-  display: inline-block;
-}
-section#message ul li {
-  border-top: 1px solid #e6e6e4;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  font-size: 16px;
-  position: relative;
-}
-section#message ul li .action {
-  min-width: 20px;
-  width: 2%;
-  text-align: right;
-  font-size: 20px;
-  padding-right: 5px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  margin-bottom: 0;
-  float: right;
-}
-section#message ul li textarea {
-  float: left;
-  width: 100%;
-  padding: 8px 10px;
-  background: #f4f4f4;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 0;
-  font-size: 18px;
-  color: #2f2f2f;
-  font-weight: 300;
-  margin-bottom: 5px;
-  resize: none;
-  border: 1px solid #e6e6e4;
-}
-section#message ul.list li {
-  display: table;
-  padding: 15px 0;
-}
-section#message ul.list li:hover {
-  background: #f4f4f4;
-}
-section#message ul.list li div {
-  display: table-cell;
-  vertical-align: middle;
-}
-section#message ul.list li .left-side {
-  width: 4%;
-}
-section#message ul.list li .right-side {
-  width: 6%;
-}
-section#message ul.list li .check {
-  min-width: 35px;
-  width: 2%;
-  padding-left: 5px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-section#message ul.list li .status {
-  min-width: 35px;
-  font-size: 18px;
-  width: 2%;
-}
-section#message ul.list li .describe {
-  width: 90%;
-  text-align: left;
-  position: relative;
-}
-section#message ul.list li .describe a {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-section#message ul.list li .describe span {
-  float: left;
-  width: 100%;
-  height: 20px;
-  overflow: hidden;
-}
-section#message ul.list li .describe .author {
-  width: 18%;
-  min-width: 145px;
-}
-section#message ul.list li .describe .subject {
-  width: 72%;
-  text-align: left;
-}
-section#message ul.list li .date {
-  width: 4%;
-  min-width: 100px;
-  text-align: center;
-}
-section#message ul.mail {
-  font-size: 16px;
-  display: inline-block;
-  border-bottom: 1px solid #e6e6e4;
-}
-section#message ul.mail li {
-  padding: 15px 0;
-  display: inline-block;
-  float: left;
-}
-section#message ul.mail li.answer {
-  background: #f4f4f4;
-}
-section#message ul.mail .images {
-  width: 13%;
-  border-left: 0;
-  padding-left: 0;
-  padding-right: 1%;
-  float: left;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: center;
-}
-section#message ul.mail .images img {
-  display: inline-block;
-  border: 1px solid #e6e6e4;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 5px;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  background: #ffffff;
-  width: 80%;
-}
-section#message ul.mail .images span {
-  font-size: 12px;
-  width: 100%;
-  text-align: center;
-}
-section#message ul.mail .description {
-  float: left;
-  border-left: 1px solid #e6e6e4;
-  width: 87%;
-  padding-left: 15px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-section#message ul.mail .description .info {
-  width: 100%;
-  float: left;
-  margin-bottom: 5px;
-}
-section#message ul.mail .description .info .date {
-  float: left;
-  font-size: 14px;
-}
-section#message ul.mail .description .info .date span {
-  font-weight: 600;
-}
-section#message ul.mail .description .subject {
-  float: left;
-  width: 100%;
-  margin-bottom: 20px;
-  font-weight: 600;
-}
-section#message ul.mail .description .subject span {
-  font-weight: 300;
-  float: left;
-  width: 100%;
-  font-size: 14px;
-  margin-bottom: 5px;
-}
-section#message ul.mail .description .describe {
-  float: left;
-  width: 100%;
-}
-section#message ul.mail .description .describe p {
-  line-height: 24px;
-  margin: 10px 0;
-  width: 98%;
-}
-section#message ul.answer {
-  border-bottom: 1px solid #e6e6e4;
-}
-section#message ul.answer li {
-  display: inline-block;
-  text-align: center;
-  padding-bottom: 5px;
-  border-top: 0;
-}
-@media only screen and (max-width: 768px) {
-  section#message ul.mail li .images {
-    width: 20%;
-  }
-  section#message ul.mail .description {
-    width: 80%;
-  }
-  section#message ul.list li .describe .author {
-    width: 20%;
-    min-width: 145px;
-  }
-  section#message ul.list li .describe .subject {
-    width: 70%;
-    text-align: left;
-  }
-}
-@media only screen and (max-width: 480px) {
-  section#message ul.mail li {
-    padding: 10px 5px;
-  }
-  section#message ul.mail li .images {
-    width: 100%;
-    text-align: left;
-  }
-  section#message ul.mail li .images img {
-    max-width: 50px;
-    padding: 3px;
-  }
-  section#message ul.mail li .images span {
-    display: inline-block;
-    vertical-align: top;
-    width: auto;
-    top: 15px;
-    margin-left: 10px;
-    font-size: 14px;
-    position: relative;
-  }
-  section#message ul.mail .description {
-    margin-top: 20px;
-    width: 100%;
-    border-left: 0;
-    padding-left: 0;
-  }
-  section#message ul.list li {
-    padding: 5px 0 10px;
-  }
-  section#message ul.list li div {
-    display: inline-block;
-    float: left;
-  }
-  section#message ul.list li .describe {
-    margin-top: 10px;
-  }
-  section#message ul.list li .describe span {
-    overflow: visible;
-    height: auto;
-  }
-  section#message ul.list li .describe .author,
-  section#message ul.list li .describe .subject {
-    display: inline-block;
-    width: 100%;
-    min-width: 100%;
-    float: left;
-  }
-  section#message ul.list li .describe .author {
-    min-width: 100%;
-    display: inline-block;
-    width: 100%;
-    font-weight: 600;
-    margin-bottom: 15px;
-  }
-  section#message ul.list li .describe .subject {
-    width: 70%;
-    text-align: left;
-  }
-  section#message ul.list li .date,
-  section#message ul.list li .action {
-    position: absolute;
-  }
-  section#message ul.list li .date {
-    top: 7px;
-    right: 30px;
-  }
-  section#message ul.list li .action {
-    top: 5px;
-    right: 5px;
-  }
-}
+.fl{float:left}.fr{float:right}.fn{float:none}.clear{clear:both}.dib{display:inline-block}.di{display:inline}.db{display:block}.dn{display:none}.bold{font-weight:600}.lighter{font-weight:300}.normal{font-weight:normal}.italic{font-style:italic}.left{text-align:left}.right{text-align:right}.tdn{text-decoration:none}.tdu{text-decoration:underline}.center{text-align:center}.justify{text-align:justify}.uppercase{text-transform:uppercase}.lowercase{text-transform:lowercase}.pointer{cursor:pointer}.relative{position:relative}.absolute{position:absolute}.list{list-style-type:none}.box-sizing{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}section#message .window{padding:15px 10px;text-align:left;position:relative;margin-bottom:10px}section#message .action{float:left;width:100%;margin-bottom:10px}section#message .action fieldset{width:200px}section#message ul{width:100%;display:inline-block}section#message ul li{border-top:1px solid #e6e6e4;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:100%;font-size:16px;position:relative}section#message ul li .action{min-width:20px;width:2%;text-align:right;font-size:20px;padding-right:5px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin-bottom:0;float:right}section#message ul li textarea{float:left;width:100%;padding:8px 10px;background:#f4f4f4;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;border:0;font-size:18px;color:#2f2f2f;font-weight:300;margin-bottom:5px;resize:none;border:1px solid #e6e6e4}section#message ul.list li{display:table;padding:15px 0}section#message ul.list li:hover{background:#f4f4f4}section#message ul.list li div{display:table-cell;vertical-align:middle}section#message ul.list li .left-side{width:4%}section#message ul.list li .right-side{width:6%}section#message ul.list li .check{min-width:35px;width:2%;padding-left:5px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}section#message ul.list li .status{min-width:35px;font-size:18px;width:2%}section#message ul.list li .describe{width:90%;text-align:left;position:relative}section#message ul.list li .describe a{position:absolute;top:0;left:0;width:100%;height:100%}section#message ul.list li .describe span{float:left;width:100%;height:25px;overflow:hidden}section#message ul.list li .describe .author{width:18%;min-width:145px}section#message ul.list li .describe .subject{width:72%;text-align:left}section#message ul.list li .date{width:4%;min-width:100px;text-align:center}section#message ul.mail{font-size:16px;display:inline-block;border-bottom:1px solid #e6e6e4}section#message ul.mail li{padding:15px 0;display:inline-block;float:left}section#message ul.mail li.answer{background:#f4f4f4}section#message ul.mail .images{width:13%;border-left:0;padding-left:0;padding-right:1%;float:left;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;text-align:center}section#message ul.mail .images img{display:inline-block;border:1px solid #e6e6e4;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding:5px;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;-o-border-radius:5px;background:#fff;width:80%}section#message ul.mail .images span{font-size:12px;width:100%;text-align:center}section#message ul.mail .description{float:left;border-left:1px solid #e6e6e4;width:87%;padding-left:15px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}section#message ul.mail .description .info{width:100%;float:left;margin-bottom:5px}section#message ul.mail .description .info .date{float:left;font-size:14px}section#message ul.mail .description .info .date span{font-weight:600}section#message ul.mail .description .subject{float:left;width:100%;margin-bottom:20px;font-weight:600}section#message ul.mail .description .subject span{font-weight:300;float:left;width:100%;font-size:14px;margin-bottom:5px}section#message ul.mail .description .describe{float:left;width:100%}section#message ul.mail .description .describe p{line-height:24px;margin:10px 0;width:98%}section#message ul.answer{border-bottom:1px solid #e6e6e4}section#message ul.answer li{display:inline-block;text-align:center;padding-bottom:5px;border-top:0}@media only screen and (max-width:768px){section#message ul.mail li .images{width:20%}section#message ul.mail .description{width:80%}section#message ul.list li .describe .author{width:20%;min-width:145px}section#message ul.list li .describe .subject{width:70%;text-align:left}}@media only screen and (max-width:480px){section#message ul.mail li{padding:10px 5px}section#message ul.mail li .images{width:100%;text-align:left}section#message ul.mail li .images img{max-width:50px;padding:3px}section#message ul.mail li .images span{display:inline-block;vertical-align:top;width:auto;top:15px;margin-left:10px;font-size:14px;position:relative}section#message ul.mail .description{margin-top:20px;width:100%;border-left:0;padding-left:0}section#message ul.list li{padding:5px 0 10px}section#message ul.list li div{display:inline-block;float:left}section#message ul.list li .describe{margin-top:10px}section#message ul.list li .describe span{overflow:visible;height:auto}section#message ul.list li .describe .author,section#message ul.list li .describe .subject{display:inline-block;width:100%;min-width:100%;float:left}section#message ul.list li .describe .author{min-width:100%;display:inline-block;width:100%;font-weight:600;margin-bottom:15px}section#message ul.list li .describe .subject{width:70%;text-align:left}section#message ul.list li .date,section#message ul.list li .action{position:absolute}section#message ul.list li .date{top:7px;right:30px}section#message ul.list li .action{top:5px;right:5px}}
