--- a/css/css_section.css
+++ b/css/css_section.css
@@ -111,7 +111,8 @@ section#visit,
 section#cabinet,
 section#account,
 section#message,
-section#profile {
+section#profile,
+section#reservation {
   padding-top: 60px;
   height: 85%;
   -webkit-box-sizing: border-box;
@@ -126,20 +127,43 @@ section#profile {
   section#message .col {
     width: 99% !important;
   }
+  section#profile .col-6.first {
+    width: 80% !important;
+  }
+}
+@media only screen and (max-width: 992px) {
+  section#profile .col-6.first {
+    width: 99% !important;
+  }
+  section#profile .col-3 {
+    width: 100%;
+    margin-left: 0;
+  }
+  section#profile .cabinet .service {
+    margin-top: 20px;
+  }
+  section#profile .cabinet .service ul {
+    width: 100% !important;
+    margin: 0 !important;
+  }
 }
 @media only screen and (max-width: 480px) {
   section#visit,
   section#cabinet,
   section#calendar,
   section#account,
-  section#message {
+  section#message,
+  section#reservation,
+  section#profile {
     padding-top: 20px;
   }
   section#visit .window,
   section#cabinet .window,
   section#calendar .window,
   section#account .window,
-  section#message .window {
+  section#message .window,
+  section#reservation .window,
+  section#profile .window {
     padding: 10px 5px !important;
   }
 }
