--- a/style.css
+++ b/style.css
@@ -1,11 +1,1 @@
-@import url(elements.css);
-@import url(css/css_blue.css);
-@import url(css/css_section.css);
-@import url(css/css_account.css);
-@import url(css/css_cabinet.css);
-@import url(css/css_calendar.css);
-@import url(css/css_message.css);
-@import url(css/css_search.css);
-@import url(css/css_visit.css);
-@import url(css/css_search.css);
-@import url(css/css_dashboard.css);
+@import url(elements.css);@import url(css/css_blue.css);@import url(css/css_section.css);@import url(css/css_account.css);@import url(css/css_cabinet.css);@import url(css/css_calendar.css);@import url(css/css_message.css);@import url(css/css_search.css);@import url(css/css_visit.css);@import url(css/css_search.css);@import url(css/css_dashboard.css);@import url(css/css_reservation.css);@import url(css/css_profile.css);@import url(css/jquery.bxslider.css);@import url(css/font-awesome.min.css);@import url(css/jquery.mCustomScrollbar.css);@import url(css/jguery.Select.css);@import url(css/jquery.minicolors.css);
