--- a/css/css_search.css
+++ b/css/css_search.css
@@ -1,496 +1,1 @@
-/* BORDER */
-/* BORDER */
-/* BORDER */
-/* BORDER */
-/* PADDING */
-/* PADDING */
-/* PADDING */
-/* PADDING */
-/* MARGIN */
-/* MARGIN */
-/* MARGIN */
-/* MARGIN */
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-.fl {
-  float: left;
-}
-.fr {
-  float: right;
-}
-.fn {
-  float: none;
-}
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-/* FLOAT */
-.clear {
-  clear: both;
-}
-.dib {
-  display: inline-block;
-}
-.di {
-  display: inline;
-}
-.db {
-  display: block;
-}
-.dn {
-  display: none;
-}
-/* fonts */
-/* fonts */
-/* fonts */
-/* fonts */
-.bold {
-  font-weight: 600;
-}
-.lighter {
-  font-weight: 300;
-}
-.normal {
-  font-weight: normal;
-}
-.italic {
-  font-style: italic;
-}
-.left {
-  text-align: left;
-}
-.right {
-  text-align: right;
-}
-.tdn {
-  text-decoration: none;
-}
-.tdu {
-  text-decoration: underline;
-}
-.center {
-  text-align: center;
-}
-.justify {
-  text-align: justify;
-}
-.uppercase {
-  text-transform: uppercase;
-}
-.lowercase {
-  text-transform: lowercase;
-}
-/* OTHER */
-/* OTHER */
-/* OTHER */
-/* OTHER */
-.pointer {
-  cursor: pointer;
-}
-.relative {
-  position: relative;
-}
-.absolute {
-  position: absolute;
-}
-.list {
-  list-style-type: none;
-}
-.box-sizing {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-/* CONTENT */
-/* CONTENT */
-/* CONTENT */
-/* CONTENT */
-/* COLOR BASE */
-/* COLOR BASE */
-section#search {
-  padding-top: 30px;
-}
-section#search .window {
-  padding: 15px;
-  text-align: left;
-  position: relative;
-}
-section#search input {
-  margin: auto;
-  width: 100%;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background: #f4f4f4;
-  border: 1px solid #e6e6e4;
-  color: #b9b9b9;
-}
-section#search .filter {
-  margin-bottom: 20px;
-}
-section#search .filter span.title {
-  text-align: left;
-  font-weight: 600;
-  float: left;
-  margin-bottom: 15px;
-  height: 33px;
-  line-height: 33px;
-}
-section#search .filter .hidden {
-  float: right;
-}
-section#search .filter ul.field {
-  float: left;
-  width: 100%;
-}
-section#search .filter ul.field li {
-  display: inline-block;
-  width: 50%;
-  text-align: center;
-  float: left;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-section#search .filter ul.field li:nth-child(2n) {
-  padding-left: 10px;
-}
-section#search .filter ul.field label,
-section#search .filter ul.field fieldset {
-  float: left;
-  width: 100%;
-  text-align: left;
-  margin: 4px 0;
-  color: #b9b9b9;
-  font-weight: 300;
-}
-section#search .filter ul.field li.time input {
-  width: 85%;
-}
-section#search .filter ul.field li.time i {
-  font-size: 28px;
-  position: relative;
-  float: right;
-  top: 5px;
-  margin-right: 5px;
-  color: #0090ff;
-}
-section#search .filter ul.field li.full {
-  width: 100%;
-}
-section#search .filter ul.action {
-  text-align: center;
-  display: inline-block;
-  width: 100%;
-  border: 0;
-  margin: 10px auto auto;
-  padding: 10px 0 0;
-  border-top: 1px solid #e6e6e4;
-}
-section#search .filter ul.action li {
-  display: inline-block;
-  float: none;
-  width: auto;
-  margin: 0 8px;
-}
-section#search .filter.small {
-  height: 76px;
-  margin-top: -20px;
-}
-section#search .filter.small .hidden {
-  display: none;
-}
-section#search .filter.small ul.field {
-  width: 82%;
-}
-section#search .filter.small ul.field label {
-  width: 20%;
-  line-height: 38px;
-}
-section#search .filter.small ul.field fieldset {
-  width: 80%;
-}
-section#search .filter.small ul.action {
-  width: 18%;
-  border-top: 0;
-  margin-top: 5px;
-  padding: 0;
-  text-align: right;
-}
-section#search .filter.small ul.action li {
-  margin: 0;
-}
-section#search .row.result {
-  margin-top: 20px;
-}
-section#search .row.result .window {
-  padding: 0 15px;
-}
-section#search ul.bxslider {
-  float: left;
-  width: 100%;
-  margin: 0;
-}
-section#search ul.list {
-  float: left;
-  width: 100%;
-}
-section#search ul.list li {
-  float: left;
-  width: 100%;
-  display: table;
-  position: relative;
-}
-section#search ul.list li:before {
-  content: '';
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 1px;
-  background: #e6e6e4;
-  display: inline-block;
-}
-section#search ul.list li:first-child {
-  border-top: 0;
-}
-section#search ul.list li:first-child:before {
-  content: none;
-}
-section#search .box {
-  display: inline-block;
-  border-left: 1px dotted #e6e6e4;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  vertical-align: top;
-  position: relative;
-  min-height: 60px;
-}
-section#search .box:first-child {
-  border-left: 0;
-  padding-left: 0;
-}
-section#search .box a {
-  color: #005494;
-  text-decoration: none;
-}
-section#search .box span.name {
-  height: auto;
-  line-height: normal;
-  width: 70%;
-  float: left;
-}
-section#search .box .pic {
-  float: left;
-  width: 50%;
-  min-width: 60px;
-}
-section#search .box .images {
-  float: left;
-  width: 100%;
-  height: auto;
-  border-radius: 100%;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -o-border-radius: 100%;
-  background: #f4f4f4;
-  padding: 3px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  max-width: 80px;
-  position: relative;
-}
-section#search .box .images a.more {
-  color: #ffffff;
-  background: #0090ff;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  bottom: 0;
-  right: 0px;
-  border-radius: 100%;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -o-border-radius: 100%;
-  text-align: center;
-}
-section#search .box .images a.more i {
-  font-size: 14px;
-  color: #ffffff;
-  margin-right: 0;
-}
-section#search .box .images img {
-  width: 100%;
-  height: auto;
-  float: left;
-  border-radius: 100%;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -o-border-radius: 100%;
-}
-section#search .box .name {
-  display: inline-block;
-  width: 50%;
-  float: left;
-}
-section#search .box span.specialization {
-  font-size: 12px;
-  float: left;
-  width: 100%;
-}
-section#search .box .address {
-  float: left;
-  width: 50%;
-}
-section#search .box .address a {
-  float: left;
-  font-size: 13px;
-}
-section#search .box .address span.number {
-  float: left;
-  font-size: 24px;
-  font-size: 20px;
-  border-radius: 100%;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -o-border-radius: 100%;
-  border: 1px solid #005494;
-  width: 25px;
-  height: 25px;
-  line-height: 25px;
-  color: #005494;
-  font-weight: 600;
-  text-align: center;
-  margin-right: 10px;
-  position: relative;
-  display: inline-block;
-  text-transform: uppercase;
-}
-section#search .box .address span.street {
-  margin-top: 5px;
-  width: 100%;
-  float: left;
-  font-size: 13px;
-}
-section#search .box.pic {
-  padding-left: 0;
-  width: 6%;
-}
-section#search .box.data {
-  padding-left: 20px;
-  width: 43%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border-left: 0;
-}
-section#search .box.calendar {
-  width: 50%;
-  display: inline-block;
-  text-align: center;
-}
-section#search .box.calendar a {
-  font-size: 18px;
-  font-weight: 600;
-}
-section#search .box.calendar .terms {
-  display: table;
-  width: 100%;
-}
-section#search .box.calendar .terms li {
-  width: 33%;
-  display: inline-block;
-  border: 0;
-  padding: 0 10px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-section#search .box.calendar .terms li:before {
-  content: none;
-}
-section#search .box.calendar .day {
-  float: left;
-  width: 100%;
-  text-align: center;
-}
-section#search .box.calendar .day .date {
-  float: left;
-  width: 100%;
-  display: inline-block;
-  line-height: 24px;
-}
-section#search .box.calendar .percent {
-  background: #e6e6e4;
-  border-radius: 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -o-border-radius: 10px;
-  width: 100%;
-  float: left;
-  height: 24px;
-}
-section#search .box.calendar .percent span {
-  color: #ffffff;
-  line-height: 24px;
-  background: #0090ff;
-  border-radius: 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -o-border-radius: 10px;
-  text-align: center;
-  font-size: 12px;
-  float: left;
-}
-@media only screen and (max-width: 480px) {
-  section#search ul.list li {
-    padding: 15px 0;
-  }
-  section#search .date-visit {
-    width: 100%;
-    display: inline-block;
-    padding: 0;
-    border: 0;
-  }
-  section#search .date-visit span {
-    position: relative;
-    float: left;
-    top: 0;
-    left: 0;
-    margin-right: 5px;
-  }
-  section#search .box,
-  section#search .box.first {
-    width: 100%;
-    padding: 0;
-    border: 0;
-  }
-  section#search .box {
-    margin-top: 10px;
-  }
-  section#search .box.action {
-    width: auto;
-    border: 0;
-    position: absolute;
-    top: 5px;
-    right: 0;
-    margin-top: 0;
-  }
-  section#search .box.action a {
-    display: inline-block;
-    margin: 0 5px;
-  }
-  section#search .box span.name {
-    width: 70%;
-  }
-  section#search .box .pic {
-    float: right;
-    width: 60px;
-  }
-}
+.fl{float:left}.fr{float:right}.fn{float:none}.clear{clear:both}.dib{display:inline-block}.di{display:inline}.db{display:block}.dn{display:none}.bold{font-weight:600}.lighter{font-weight:300}.normal{font-weight:normal}.italic{font-style:italic}.left{text-align:left}.right{text-align:right}.tdn{text-decoration:none}.tdu{text-decoration:underline}.center{text-align:center}.justify{text-align:justify}.uppercase{text-transform:uppercase}.lowercase{text-transform:lowercase}.pointer{cursor:pointer}.relative{position:relative}.absolute{position:absolute}.list{list-style-type:none}.box-sizing{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}section#search{padding-top:30px}section#search .window{padding:15px;text-align:left;position:relative}section#search input{margin:auto;width:100%;padding:10px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;background:#f4f4f4;border:1px solid #e6e6e4;color:#b9b9b9}section#search .filter{margin-bottom:20px}section#search .filter span.title{text-align:left;font-weight:600;float:left;margin-bottom:15px;height:33px;line-height:33px}section#search .filter .hidden{float:right}section#search .filter ul.field{float:left;width:100%}section#search .filter ul.field li{display:inline-block;width:50%;text-align:center;float:left;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}section#search .filter ul.field li:nth-child(2n){padding-left:10px}section#search .filter ul.field label,section#search .filter ul.field fieldset{float:left;width:100%;text-align:left;margin:4px 0;color:#b9b9b9;font-weight:300}section#search .filter ul.field li.time input{width:85%}section#search .filter ul.field li.time i{font-size:28px;position:relative;float:right;top:5px;margin-right:5px;color:#0090ff}section#search .filter ul.field li.full{width:100%}section#search .filter ul.action{text-align:center;display:inline-block;width:100%;border:0;margin:10px auto auto;padding:10px 0 0;border-top:1px solid #e6e6e4}section#search .filter ul.action li{display:inline-block;float:none;width:auto;margin:0 8px}section#search .filter.small{height:76px;margin-top:-20px}section#search .filter.small .hidden{display:none}section#search .filter.small ul.field{width:82%}section#search .filter.small ul.field label{width:20%;line-height:38px}section#search .filter.small ul.field fieldset{width:80%}section#search .filter.small ul.action{width:18%;border-top:0;margin-top:5px;padding:0;text-align:right}section#search .filter.small ul.action li{margin:0}section#search .row.result{margin-top:20px}section#search .row.result .window{padding:0 15px}section#search ul.bxslider{float:left;width:100%;margin:0}section#search ul.list{float:left;width:100%}section#search ul.list li{float:left;width:100%;display:table;position:relative}section#search ul.list li:before{content:'';width:100%;position:absolute;top:0;left:0;height:1px;background:#e6e6e4;display:inline-block}section#search ul.list li:first-child{border-top:0}section#search ul.list li:first-child:before{content:none}section#search .box{display:inline-block;border-left:1px dotted #e6e6e4;padding:0;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;vertical-align:top;position:relative;min-height:60px}section#search .box:first-child{border-left:0;padding-left:0}section#search .box a{color:#005494;text-decoration:none}section#search .box span.name{height:auto;line-height:normal;width:70%;float:left}section#search .box .pic{float:left;width:50%;min-width:60px}section#search .box .images{float:left;width:100%;height:auto;border-radius:100%;-moz-border-radius:100%;-webkit-border-radius:100%;-o-border-radius:100%;background:#f4f4f4;padding:3px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;max-width:80px;position:relative}section#search .box .images a.more{color:#fff;background:#0090ff;width:20px;height:20px;position:absolute;bottom:0;right:0px;border-radius:100%;-moz-border-radius:100%;-webkit-border-radius:100%;-o-border-radius:100%;text-align:center}section#search .box .images a.more i{font-size:14px;color:#fff;margin-right:0}section#search .box .images img{width:100%;height:auto;float:left;border-radius:100%;-moz-border-radius:100%;-webkit-border-radius:100%;-o-border-radius:100%}section#search .box .name{display:inline-block;width:50%;float:left}section#search .box span.specialization{font-size:12px;float:left;width:100%}section#search .box .address{float:left;width:50%}section#search .box .address a{float:left;font-size:13px}section#search .box .address span.number{float:left;font-size:24px;font-size:20px;border-radius:100%;-moz-border-radius:100%;-webkit-border-radius:100%;-o-border-radius:100%;border:1px solid #005494;width:25px;height:25px;line-height:25px;color:#005494;font-weight:600;text-align:center;margin-right:10px;position:relative;display:inline-block;text-transform:uppercase}section#search .box .address span.street{margin-top:5px;width:100%;float:left;font-size:13px}section#search .box.pic{padding-left:0;width:6%}section#search .box.data{padding-left:20px;width:43%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;border-left:0}section#search .box.calendar{width:50%;display:inline-block;text-align:center}section#search .box.calendar a{font-size:18px;font-weight:600}section#search .box.calendar .terms{display:table;width:100%}section#search .box.calendar .terms li{width:33%;display:inline-block;border:0;padding:0 10px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}section#search .box.calendar .terms li:before{content:none}section#search .box.calendar .day{float:left;width:100%;text-align:center}section#search .box.calendar .day .date{float:left;width:100%;display:inline-block;line-height:24px}section#search .box.calendar .percent{background:#e6e6e4;border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px;-o-border-radius:10px;width:100%;float:left;height:24px}section#search .box.calendar .percent span{color:#fff;line-height:24px;background:#0090ff;border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px;-o-border-radius:10px;text-align:center;font-size:12px;float:left}@media only screen and (max-width:480px){section#search ul.list li{padding:15px 0}section#search .date-visit{width:100%;display:inline-block;padding:0;border:0}section#search .date-visit span{position:relative;float:left;top:0;left:0;margin-right:5px}section#search .box,section#search .box.first{width:100%;padding:0;border:0}section#search .box{margin-top:10px}section#search .box.action{width:auto;border:0;position:absolute;top:5px;right:0;margin-top:0}section#search .box.action a{display:inline-block;margin:0 5px}section#search .box span.name{width:70%}section#search .box .pic{float:right;width:60px}}
