--- a/style.less
+++ b/style.less
@@ -12,12 +12,11 @@
 @import url(css/css_visit.css);
 @import url(css/css_search.css);
 @import url(css/css_dashboard.css);
+@import url(css/css_reservation.css);
+@import url(css/css_profile.css);
 
-
-
-
-
-
-
-
-
+@import url(css/jquery.bxslider.css);
+@import url(css/font-awesome.min.css);
+@import url(css/jquery.mCustomScrollbar.css);
+@import url(css/jguery.Select.css);
+@import url(css/jquery.minicolors.css);
